--- a/site Uxunicornio/assets/css/base.css
+++ b/site Uxunicornio/assets/css/base.css
@@ -6,3 +6,28 @@ body{
 	background: #ffee58;
 	color: #ff00af;
 }
+
+h1{
+
+}
+
+h4{
+	font-size: 24px;
+	line-height: 32px;
+	font-weight: 600;
+	text-align: left;
+	color: #ff00af;
+	margin-bottom: 32px;
+
+}
+
+h5{
+
+}
+.ementa {
+	background: #fff6ff;
+}
+
+.ementa-conteudo{
+	background: #fff;
+}
